[gd_scene load_steps=3 format=3 uid="uid://c2tjldwjynnry"]

[ext_resource type="Script" path="res://Scripts/UI/game_chat.gd" id="1_3ps2f"]
[ext_resource type="Theme" uid="uid://cxft16v20dg2s" path="res://Art/UI/chat_theme.tres" id="1_r6xwp"]

[node name="GameChat" type="MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(900, 450)
offset_right = 300.0
auto_translate = false
localize_numeral_system = false
theme = ExtResource("1_r6xwp")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_3ps2f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ShortInactiveLog" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1
alignment = 2

[node name="FullLog" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="FullLogContent" type="Label" parent="VBoxContainer/HBoxContainer/FullLog"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_alignment = 2
autowrap_mode = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="ChatLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "type a beautiful message"
editable = false
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="activate"]
[connection signal="focus_entered" from="VBoxContainer/ChatLineEdit" to="." method="_on_chat_line_edit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ChatLineEdit" to="." method="deactivate"]
[connection signal="text_submitted" from="VBoxContainer/ChatLineEdit" to="." method="_on_chat_line_edit_text_submitted"]
